@@ -60,17 +60,8 @@ namespace JSC {
             ASSERT(m_values.isEmpty());
         }
 
-        void deprecatedAppend(JSValue*);
         void deprecatedAppend(JSCell**);
-        void deprecatedAppend(Register*);
         template <typename T> void append(WriteBarrierBase<T>*);
-        
-        ALWAYS_INLINE void deprecatedAppendValues(Register* registers, size_t count, MarkSetProperties properties = NoNullValues)
-        {
-            JSValue* values = reinterpret_cast<JSValue*>(registers);
-            if (count)
-                m_markSets.append(MarkSet(values, values + count, properties));
-        }
 
         void appendValues(WriteBarrierBase<Unknown>* barriers, size_t count, MarkSetProperties properties = NoNullValues)
         {
@@ -229,12 +220,6 @@ namespace JSC {
         internalAppend(*value);
     }
 
-    ALWAYS_INLINE void MarkStack::deprecatedAppend(JSValue* value)
-    {
-        ASSERT(value);
-        internalAppend(*value);
-    }
-    
     ALWAYS_INLINE void MarkStack::append(JSValue* value)
     {
         ASSERT(value);
@@ -245,12 +230,6 @@ namespace JSC {
     {
         ASSERT(value);
         internalAppend(*value);
-    }
-
-    ALWAYS_INLINE void MarkStack::deprecatedAppend(Register* value)
-    {
-        ASSERT(value);
-        internalAppend(value->jsValue());
     }
 
     ALWAYS_INLINE void MarkStack::internalAppend(JSValue value)
